# LogicSim

./: .clang-format  .gitignore  CMakeLists.txt
.cache/clangd/index/: colors.cpp.CC9E9FCC22A7EAED.idx  colors.h.3D7C68FE5C971A7B.idx  main.cpp.3235EF6D1A8D9216.idx  mainWindow.cpp.44509D5A93D6330E.idx  mainWindow.h.ACC86CB4F3BDA8BD.idx  qmainwindow.cpp.610594D5F7533E80.idx  qmainwindow.h.68A3609BD13B9FC6.idx  timer.cpp.5A4AA53E164509AA.idx  timer.h.61187D17F5A62C60.idx
font/: fonts.qrc
include/: button.h  colors.h  gate.h  gateMenu.h  inputsMenu.h  mainMenu.h  mainWindow.h  menu.h  settings.h  toggle.h
src/: button.cpp  colors.cpp  gate.cpp  gateMenu.cpp  inputsMenu.cpp  main.cpp  mainWindow.cpp  menu.cpp  settings.cpp  toggle.cpp
